Backend and frontend check for new version
