# docs/assets/api.yml
@@ -142,6 +142,22 @@ paths:
           description: Incorrect request data
         "500":
           description: Error
+  /version:
+    get:
+      summary: Get system version
+      tags:
+        - system
+      responses:
+        "200":
+          description: Success
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "405":
+          description: Incorrect request data
+        "500":
+          description: Error
   /shelves:
     get:
       summary: Get a list of all shelves
